--- a/hello.html
+++ b/hello.html
@@ -16,7 +16,11 @@
 		<!-- TITRE -->
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
-		</div>
+        </div>
+        <div>
+            <p>Ciao Fred est un duo accoustique pop / folk</p>
+        </div>
+
 		
 	</body>
 </html>
