--- a/hello.html
+++ b/hello.html
@@ -17,8 +17,15 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
         </div>
+        <!--description-->
         <div>
+            <h1>Ma description</h1>
             <p>Ciao Fred est un duo accoustique pop / folk</p>
+        </div>
+          <!--recompense-->
+          <div>
+            <h1>Mes récompenses</h1>
+            <p>en construction ...</p>
         </div>
 
 		
