ajout d'un gist

--- a/hello.html
+++ b/hello.html
@@ -27,6 +27,13 @@
             <h1>Mes récompenses</h1>
             <p>en construction ...</p>
         </div>
+         <!--mon gist-->
+         <div>
+            <h1>Mon gist</h1>
+            <p><script src="https://gist.github.com/CiaoFred/9d28876eeafb65404f2e2efde17abbd1.js"></script></p>
+        </div>
+
+        
 
 		
 	</body>
